Second changes made to index.html

--- a/HTML/index.html
+++ b/HTML/index.html
@@ -1,5 +1,7 @@
 <html>
-<head><title>Web Architectures Page</title></head>
+<head><title>Web Architectures Page</title>
+<link href="style.css" rel="stylesheet" type="text/css"/>
+</head>
 <body>
 <h1>Web Architectures Testing Page</h1>
 <p>Lorem ipsum dolor sit amet, his suas consul ex. Mel ad elit primis, legere iisque menandri eum ut. At nam elit primis. At eum amet minim, sit et alienum deseruisse contentiones. Ius ei consul alienum, enim habeo nostrud sit no.</p>
