--- a/HTML/index.html
+++ b/HTML/index.html
@@ -4,8 +4,11 @@
 </head>
 <body>
 <h1>Web Architectures Testing Page</h1>
+  <h3> First Sub-Heading</h3>
 <p>Lorem ipsum dolor sit amet, his suas consul ex. Mel ad elit primis, legere iisque menandri eum ut. At nam elit primis. At eum amet minim, sit et alienum deseruisse contentiones. Ius ei consul alienum, enim habeo nostrud sit no.</p>
+  <h3> Second Sub-Heading</h3>
 <p>Vel an inani honestatis efficiantur. Nam maiestatis voluptatibus definitiones eu, labores accommodare no has. Vel ne oblique volumus pertinacia. An movet assueverit nam, in his iudico aliquid patrioque. No eos dolor deleniti. Assum pertinacia quo an, et qui rebum liber deterruisset.</p>
+  <h3> Third Sub-Heading</h3>
 <p>Qui wisi iriure in, melius verear adolescens duo ei. Inani error perfecto cum ea. Vis tacimates adipiscing efficiantur ut. Cum laudem virtute ex, eos tation neglegentur ut. Ei vitae postulant expetendis eum, nihil virtute sea no, duo nusquam mediocrem in.</p>
 </body>
 </html>
